# lidar_strategy

./: CMakeLists.txt  debug lidar.rviz  package.xml
doc/: doc_math.ggb
include/: Krabi  krabilib  lidarStrat.h
launch/: lidar_strat_launch.py  main.launch
src/: Krabi  lidarStrat.cpp  main.cpp
