<?xml version="1.0"?>
<package format="2">
  <name>lidar_strategy</name>
  <version>0.0.0</version>
  <description>The lidar package</description>

  <maintainer email="victor.dubois@free.fr">victor</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
