<?xml version="1.0"?>
<package format="2">
  <name>lidar_strategy</name>
  <version>0.0.0</version>
  <description>The lidar package</description>

  <maintainer email="victor.dubois@free.fr">victor</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>goal_strategy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
